добавлено в стрим .anyMatch(uri -> hit.getUri().startsWith(uri))) в методе filterByUris класса StatServiceImpl